Fix padding/margin offset on small screen

--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -33,11 +33,8 @@
       }
     }
     .wrapper {
-      margin-left: -$gutter;
-      margin-right: -$gutter;
-      @media( min-width: $breakpoint-small ) {
-        margin-left: auto;
-        margin-right: auto;
+      @media( max-width: $breakpoint-small ) {
+        padding: 0;
       }
     }
   }
